# codifier

./: .gitignore  CMakeLists.txt  readme.txt
documentation/: readme.txt
matlab/: SampleData.m  ThresholdCalculator.m  calculateSpectralPeaks.m  convertFromBarkToFrequency.m  convertToBarkSpectrum.m  getFrequencyFromSamples.m  getPotencyInBarkSpectrum.m  getScatteredCriticalBandPotency.m  getScatteringMatrix.m  getScatteringThreshold.m  getSizeOfBarkSpectrum.m  getSoundPressureLevelThreshold.m  getThreshold.m  getTonalityCoefficient.m  leSgn.m  main.m  tocaSgn.m  visualizaDEP.m  wav2sgn.m
programas/: CMakeLists.txt
programas/analisador_de_entropia/: CMakeLists.txt  FirstOrderEntropyAnaliser.cpp  FirstOrderEntropyAnaliser.h  analisador_de_entropia.cpp  dna2.txt  quincas_borba.txt
programas/arithmetic_compressor/: ArithmeticEncoder.cpp  ArithmeticEncoder.h  CMakeLists.txt  main.cpp
programas/arithmetic_decompressor/: ArithmeticDecoder.cpp  ArithmeticDecoder.h  CMakeLists.txt  main.cpp
programas/entropy_analiser/: CMakeLists.txt  FirstOrderEntropyAnaliser.cpp  FirstOrderEntropyAnaliser.h  analisador_de_entropia_ordens.cpp  dna.txt
programas/utils/: CMakeLists.txt  DataFrequency.cpp  DataFrequency.h  DataTypes.h  FileWriter.cpp  FileWriter.h  MessageHeader.cpp  MessageHeader.h  MessageSize.cpp  MessageSize.h
structures/: CMakeLists.txt  MyBitManipulation.h
structures/binary_tree/: MyBinaryTree.h
structures/deque/: MDLinkedList.h
structures/graph/: MyGraph.h
structures/trie/: MTrie_test.cpp
tests/: AllTests.cpp  ArithmeticCompressorDataGenerator.h  CMakeLists.txt
tests/programs/arithmetic_compressor/: ArithmeticCompressorDataGenerator.h  ArithmeticDecoder_UnitTest.cpp  ArithmeticEncoder_UnitTest.cpp
tests/programs/arithmetic_decompressor/: ArithmeticDecoder_UnitTest.cpp
tests/programs/entropy_analiser/: FirstOrderEntropyAnaliser_UnitTest.cpp  dna.txt  dna2.txt
tests/utils/: DataFrequencyEncoding_UnitTest.cpp
